# gameboy-emulator

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN.md  TECH.md
src/: arithmetic.hpp  cartridge.hpp  cartridge_contract.hpp  cartridge_factory.cpp  cartridge_factory.hpp  cartridge_header.hpp  cpu.hpp  hardware_constants.hpp  interrupt_controller.cpp  interrupt_controller.hpp  main.cpp  ppu.cpp  rom_only_cartridge.cpp  rom_only_cartridge.hpp
tests/: CMakeLists.txt
tests/src/: test_cartridge.cpp  test_interrupt_controller.cpp
